fixed chart legend cutoff; changed "Free" to "Available" in ram chart per issue #386

--- a/src/js/core/features/plugin/plugin.css
+++ b/src/js/core/features/plugin/plugin.css
@@ -78,6 +78,7 @@
 .plugin.chart-plugin,
 .plugin.chart-plugin .plugin-body {
   overflow: hidden;
+  padding: 0;
 }
 
 .plugin-body-short {
